unpackaged/main/default/objects/FLAGS__CaseFlagNotification__c/FLAGS__CaseFlagNotification__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used to store flag notifications</description>
    <label>Case Flag Notification</label>
</CustomObject>