unpackaged/main/default/objects/FLAGS__CaseFlagNotification__c/fields/FLAGS__Active__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>