unpackaged/main/default/objects/FLAGS__CaseFlagNotification__c/fields/FLAGS__Details__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Details__c</fullName>
    <label>Details</label>
    <type>TextArea</type>
</CustomField>