unpackaged/main/default/objects/FLAGS__CaseFlagNotification__c/fields/FLAGS__FlagLevel__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__FlagLevel__c</fullName>
    <description>1-4</description>
    <label>Flag Level</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>