unpackaged/main/default/objects/FLAGS__CaseFlagNotification__c/fields/FLAGS__TimeOffset__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__TimeOffset__c</fullName>
    <label>Time Offset</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>