unpackaged/main/default/objects/FLAGS__CaseFlagNotification__c/fields/FLAGS__Type__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Type__c</fullName>
    <description>'Flag Set' OR 'Next Flag'</description>
    <label>Type</label>
    <length>16</length>
    <type>Text</type>
</CustomField>